thin scrollbar fixed globally

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,11 @@ html {
   scrollbar-width: thin;
 }
 
+div {
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+}
+
 ::-webkit-scrollbar {
   width: 9px;
 }
